# med-tracker

./: .dockerignore  .gitignore  .markdownlintignore  .release-please-manifest.json  .rubocop.yml  .simplecov  .tool-versions  .windsurfrules  .yamllint.yaml  AUTHORIZATION_COMPLETION_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  GEMINI.md  Gemfile  Guardfile  LICENSE  MOBILE_UI_IMPROVEMENTS.md  OPENTELEMETRY_IMPLEMENTATION.md  PERSON_MEDICINES_IMPLEMENTATION.md  README.docker.md  README.md  REVIEW.md  TESTING.md  Taskfile.internal.yml  Taskfile.test.yml  Taskfile.yml  USER_MANAGEMENT_PLAN.md  agents.md  claude-progress.txt  code-review-progress.txt  commit_message.txt  compose.yaml  cookies.txt  design-qa.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  (+30 more)
.Jules/: palette.md
.beads/: .gitignore  .migration-hint-ts  config.yaml  issues.jsonl
.claude/: settings.json  settings.local.json
.gemini_security/: security-finding.txt
.github/: copilot-instructions.md
.jules/: bolt.md  palette.md  sentinel.md
.kamal/: secrets
.serena/: project.yml
.windsurf/: check_gemfile.rb  hooks.json
Taskfiles/: README.md  Taskfile.internal.yml  audit.yml  capture_test.yml  dev.yml  docs.yml  internal.yml  jq.yml  lighthouse.yml  local.yml  prod.yml  production.yml  test.yml  worktree.yml
client-tools/: Cargo.toml
client-tools/crates/medtracker-api-client/: Cargo.toml
client-tools/crates/medtracker-api-client/src/: auth.rs  backup.rs  capabilities.rs  client.rs  error.rs  lib.rs  models.rs  portable.rs  resources.rs  sync.rs
client-tools/crates/medtracker-cli/: Cargo.toml
client-tools/crates/medtracker-cli/src/: args.rs  config.rs  main.rs  output.rs  secrets.rs
client-tools/crates/medtracker-cli/src/commands/: mod.rs
client-tools/crates/medtracker-cli/tests/: cli.rs
client-tools/crates/medtracker-mcp/: Cargo.toml
client-tools/crates/medtracker-mcp/src/: main.rs  server.rs
client-tools/crates/medtracker-mcp/src/tools/: mod.rs
compose/: base.yml  init-multiple-dbs.sh  init-roles.sql
conductor/: choices.html  m3-design-choices.md  m3-strict-migration.md  medication-ui-standardization-part2.md  medication-ui-standardization.md  product-guidelines.md  product.md  reports-button-fix.md  tech-stack.md  tracks.md
config/: ai_medication_sources.yml  application.rb  brakeman.ignore  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  medication_review_labels.yml  medication_review_terminology_aliases.yml  mutant.yml  nhs_dmd_curated_products.yml  recurring.yml  routes.rb  storage.yml
db/: queue_schema.rb  schema.rb  seeds.rb  test.sqlite3
docs/: PR_SUMMARY.md  accessibility-smoke-test.md  accessibility.md  admin-operations-dashboard-mockup.html  mcp.md  (+39 more)
(+2507 files in other folders)
