[workspace]
resolver = "2"
members = [
  "crates/medtracker-api-client",
  "crates/medtracker-cli",
  "crates/medtracker-mcp",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/damacus/med-tracker"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
directories = "6"
insta = { version = "1", features = ["json"] }
keyring = "3"
predicates = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.6", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
wiremock = "0.6"
