[package]
name = "medtracker-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "medtracker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
directories.workspace = true
keyring.workspace = true
medtracker-api-client = { path = "../medtracker-api-client" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
wiremock.workspace = true
