[package]
name = "medtracker-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "medtracker-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
medtracker-api-client = { path = "../medtracker-api-client" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
wiremock.workspace = true
